v1.0.0/modules/schema/pages/class/TASE2BilateralTable.adoc
= `TASE2BilateralTable`
:toclevels: 4


+++This class describe the sending (providing) side in a bilateral ICCP data exchange. Hence the ICCP bilateral (table) descriptions are created by exchanging ICCP Provider data between the parties.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TASE2BilateralTable`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]
*** *`TASE2BilateralTable`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TASE2BilateralTable {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ICCPInformationMessage {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BilateralExchangeActor {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BilateralExchangeActor {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TASE2BilateralTable -> ICCPInformationMessage: ICCPInformationMessage


TASE2BilateralTable -> BilateralExchangeActor: Consumer


TASE2BilateralTable -> BilateralExchangeActor: Provider


TASE2BilateralTable -> DiagramObject: DiagramObjects


TASE2BilateralTable -> InstanceSet: InstanceSet


TASE2BilateralTable -> Name: Names


TASE2BilateralTable -> ChangeSetMember: PropertiesCIMDataObject


TASE2BilateralTable -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Provider,`Provider`>>
| 1
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]
| +++Provider of information to a remote peer.+++

| <<bilateralTableID,`bilateralTableID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Specifies the version of the Bilateral Table configuration that is being exchanged.+++

| <<bilateralTableVersion,`bilateralTableVersion`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The Version attribute identifies a unique version of the Bilateral Table. If any changes are made to a Bilateral Table, then a new unique value for this attribute shall be generated.+++

| <<tase2version,`tase2version`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Specifies the version of the TASE.2 that is needed to access the Bilateral Table information via TASE.2.

In order for a link to be established, both sides must have the same value.+++

| <<ICCPInformationMessage,`ICCPInformationMessage`>>
| 0..*
| xref::class/ICCPInformationMessage.adoc[`ICCPInformationMessage`]
| +++Informational message to be included in a Bilateral Table agreement.+++

| <<Consumer,`Consumer`>>
| 0..1
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]
| +++Subscriber of information from a remote peer.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#bilateralTableID]
=== `bilateralTableID`
+++Specifies the version of the Bilateral Table configuration that is being exchanged.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TASE2BilateralTable.bilateralTableID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#bilateralTableVersion]
=== `bilateralTableVersion`
+++The Version attribute identifies a unique version of the Bilateral Table. If any changes are made to a Bilateral Table, then a new unique value for this attribute shall be generated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TASE2BilateralTable.bilateralTableVersion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Consumer]
=== `Consumer`
+++Subscriber of information from a remote peer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BilateralExchangeAgreement.Consumer`
| Cardinality
| 0..1
| Type
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]

| Inherited from
| xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ICCPInformationMessage]
=== `ICCPInformationMessage`
+++Informational message to be included in a Bilateral Table agreement.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TASE2BilateralTable.ICCPInformationMessage`
| Cardinality
| 0..*
| Type
| xref::class/ICCPInformationMessage.adoc[`ICCPInformationMessage`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Provider]
=== `Provider`
+++Provider of information to a remote peer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:BilateralExchangeAgreement.Provider`
| Cardinality
| 1
| Type
| xref::class/BilateralExchangeActor.adoc[`BilateralExchangeActor`]

| Inherited from
| xref::class/BilateralExchangeAgreement.adoc[`BilateralExchangeAgreement`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tase2version]
=== `tase2version`
+++Specifies the version of the TASE.2 that is needed to access the Bilateral Table information via TASE.2.

In order for a link to be established, both sides must have the same value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TASE2BilateralTable.tase2version`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


